fix: layer select overflow

--- a/app/src/react/styles/sidebar.scss
+++ b/app/src/react/styles/sidebar.scss
@@ -139,7 +139,7 @@
 		background-color: black;
 		color: silver;
 		border: 0;
-		padding: 0.5rem 1rem;
+		padding: 0.5rem 0;
 	}
 
 	hr {
